# openai-assistant

./: .gitignore  CMakeLists.txt  README.md  assistant_demo.cpp  do_build.sh
configs/: assistant.json  client.json
include/: message_queue.h  openai_config.h  openai_conversation.h  openai_helper.h
include/httplib/: httplib.h
